--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -1,1 +1,10 @@
-index.erb
+<ul>
+  <% @pets.each do |pet| %>
+    <li>
+      <%= pet.name %>
+      <a href="<%="/pets/#{pet.id}/edit" %>"/edit">Edit</a>
+    </li>
+  <% end %>
+</ul>
+
+<a href ="/pets/new">Add a Pet</a>
