--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,1 +1,10 @@
-show.erb
+<% require "pry" %>
+<h1><%=@pet.name%></h1>
+<h4>Owners:</h4>
+<ul>
+  <li>
+  <%=@pet.owner.name%>
+  </li>
+</ul>
+
+<a href="/pets">Pets</a>
